Change base font-size for the entire app and some other adjustments

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -28,12 +28,18 @@
   html[data-theme="dark"] #sun-svg {
     display: block;
   }
+
+  html {
+    font-size: 18px;
+    @apply lg:text-[22px];
+  }
+
   body {
-    @apply flex min-h-[100svh] flex-col bg-skin-fill font-mono text-skin-base selection:bg-skin-accent/70 selection:text-skin-inverted;
+    @apply flex min-h-[100svh] flex-col bg-skin-fill font-sans text-skin-base selection:bg-skin-accent/60 selection:text-skin-inverted;
   }
   section,
   footer {
-    @apply mx-auto max-w-3xl px-4;
+    @apply mx-auto max-w-4xl px-4;
   }
   a {
     @apply outline-2 outline-offset-1 outline-skin-fill focus-visible:no-underline focus-visible:outline-dashed;
