Fix font family name and fix the fallback font for serif fonts

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -35,7 +35,7 @@
   }
 
   body {
-    @apply flex min-h-[100svh] flex-col bg-skin-fill font-sans text-skin-base selection:bg-skin-accent/60 selection:text-skin-inverted;
+    @apply flex min-h-[100svh] flex-col bg-skin-fill font-serif text-skin-base selection:bg-skin-accent/60 selection:text-skin-inverted;
   }
   section,
   footer {
