--- a/src/layouts/PostDetails.astro
+++ b/src/layouts/PostDetails.astro
@@ -185,8 +185,9 @@ const nextPost =
   main {
     @apply mx-auto w-full max-w-4xl px-4 pb-12;
   }
+
   .post-title {
-    @apply text-2xl font-semibold text-skin-accent;
+    @apply text-xl font-semibold text-skin-accent;
   }
 </style>
 
