--- a/src/layouts/Posts.astro
+++ b/src/layouts/Posts.astro
@@ -18,7 +18,7 @@ const { page } = Astro.props;
 
 <Layout title={`Posts | ${SITE.title}`}>
   <Header activeNav="posts" />
-  <Main pageTitle="Posts" pageDesc="All the articles I've posted.">
+  <Main pageTitle="Publicações" pageDesc="Todos as minhas publicações.">
     <ul>
       {
         page.data.map(({ data, slug }) => (
