--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,13 +42,13 @@ const socialCount = SOCIALS.filter(social => social.active).length;
       </a>
 
       <p>
-        Bem vindo a minha página pessoal onde compartilho meus conhecimentos,
+        Bem-vindo a minha página pessoal! Aqui compartilho meus conhecimentos,
         aprendizados e experiências com desenvolvimento de software, uso de
         distros Linux, uso de Single-Board Computers (SBC), sistemas embarcados
         e não-embarcados, IoT, experiências com DIY e qualquer outro assunto de
         meu interesse.
       </p>
-      <p>Leia minha publicações ou veja minha redes sociais.</p>
+      <p>Leia minhas publicações ou veja minhas redes sociais.</p>
       {
         // only display if at least one social link is enabled
         socialCount > 0 && (
